feat: add slug; contract type apis
